--- a/notebooks/Unemp_Total.ipynb
+++ b/notebooks/Unemp_Total.ipynb
@@ -28,17 +28,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "(58402, 21)\n(58402, 21)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -77,22 +69,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(0, 5)"
-      ]
+       "              year  unemploy_rate\n",
+       "count  9575.000000    9575.000000\n",
+       "mean   2008.111854       7.067016\n",
+       "std       4.870039       7.330798\n",
+       "min    2000.000000       0.000000\n",
+       "25%    2004.000000       2.550244\n",
+       "50%    2008.000000       5.115512\n",
+       "75%    2012.000000       9.034691\n",
+       "max    2016.000000      63.839298"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>year</th>\n      <th>unemploy_rate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>9575.000000</td>\n      <td>9575.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>2008.111854</td>\n      <td>7.067016</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>4.870039</td>\n      <td>7.330798</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>2000.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>2004.000000</td>\n      <td>2.550244</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>2008.000000</td>\n      <td>5.115512</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>2012.000000</td>\n      <td>9.034691</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>2016.000000</td>\n      <td>63.839298</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 12
     }
    ],
    "source": [
-    "unemp.shape"
+    "unemp.describe()"
    ]
   },
   {
@@ -123,11 +124,14 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [unemploy_rate]\n",
-       "Index: []"
+       "       unemploy_rate\n",
+       "age                 \n",
+       "15-24          18.31\n",
+       "25-34           8.86\n",
+       "35-54           6.20\n",
+       "55-74           2.99"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>unemploy_rate</th>\n    </tr>\n    <tr>\n      <th>age</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>unemploy_rate</th>\n    </tr>\n    <tr>\n      <th>age</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>15-24</th>\n      <td>18.31</td>\n    </tr>\n    <tr>\n      <th>25-34</th>\n      <td>8.86</td>\n    </tr>\n    <tr>\n      <th>35-54</th>\n      <td>6.20</td>\n    </tr>\n    <tr>\n      <th>55-74</th>\n      <td>2.99</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "execution_count": 5
@@ -147,11 +151,52 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [unemploy_rate]\n",
-       "Index: []"
+       "                    unemploy_rate\n",
+       "country                          \n",
+       "South Africa                21.29\n",
+       "Greece                      13.37\n",
+       "Croatia                     11.40\n",
+       "Poland                      10.82\n",
+       "Bulgaria                    10.46\n",
+       "Latvia                      10.28\n",
+       "Lithuania                    9.75\n",
+       "Colombia                     9.64\n",
+       "Italy                        9.07\n",
+       "Estonia                      8.42\n",
+       "Portugal                     8.29\n",
+       "Chile                        7.91\n",
+       "Russian Federation           7.74\n",
+       "Finland                      7.73\n",
+       "France                       7.66\n",
+       "Israel                       7.38\n",
+       "Turkey                       7.14\n",
+       "Brazil                       7.05\n",
+       "Hungary                      6.90\n",
+       "Belgium                      6.83\n",
+       "Cyprus                       6.59\n",
+       "Czech Republic               6.45\n",
+       "Sweden                       6.39\n",
+       "Costa Rica                   6.24\n",
+       "Ireland                      6.20\n",
+       "Canada                       6.19\n",
+       "Romania                      6.03\n",
+       "United Kingdom               6.03\n",
+       "Germany                      5.89\n",
+       "Slovenia                     5.79\n",
+       "Malta                        4.96\n",
+       "Australia                    4.96\n",
+       "Netherlands                  4.77\n",
+       "Luxembourg                   4.59\n",
+       "New Zealand                  4.39\n",
+       "Denmark                      4.37\n",
+       "Japan                        4.20\n",
+       "Iceland                      3.93\n",
+       "Austria                      3.86\n",
+       "Switzerland                  3.40\n",
+       "Norway                       3.09\n",
+       "Mexico                       3.07"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>unemploy_rate</th>\n    </tr>\n    <tr>\n      <th>country</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>unemploy_rate</th>\n    </tr>\n    <tr>\n      <th>country</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>South Africa</th>\n      <td>21.29</td>\n    </tr>\n    <tr>\n      <th>Greece</th>\n      <td>13.37</td>\n    </tr>\n    <tr>\n      <th>Croatia</th>\n      <td>11.40</td>\n    </tr>\n    <tr>\n      <th>Poland</th>\n      <td>10.82</td>\n    </tr>\n    <tr>\n      <th>Bulgaria</th>\n      <td>10.46</td>\n    </tr>\n    <tr>\n      <th>Latvia</th>\n      <td>10.28</td>\n    </tr>\n    <tr>\n      <th>Lithuania</th>\n      <td>9.75</td>\n    </tr>\n    <tr>\n      <th>Colombia</th>\n      <td>9.64</td>\n    </tr>\n    <tr>\n      <th>Italy</th>\n      <td>9.07</td>\n    </tr>\n    <tr>\n      <th>Estonia</th>\n      <td>8.42</td>\n    </tr>\n    <tr>\n      <th>Portugal</th>\n      <td>8.29</td>\n    </tr>\n    <tr>\n      <th>Chile</th>\n      <td>7.91</td>\n    </tr>\n    <tr>\n      <th>Russian Federation</th>\n      <td>7.74</td>\n    </tr>\n    <tr>\n      <th>Finland</th>\n      <td>7.73</td>\n    </tr>\n    <tr>\n      <th>France</th>\n      <td>7.66</td>\n    </tr>\n    <tr>\n      <th>Israel</th>\n      <td>7.38</td>\n    </tr>\n    <tr>\n      <th>Turkey</th>\n      <td>7.14</td>\n    </tr>\n    <tr>\n      <th>Brazil</th>\n      <td>7.05</td>\n    </tr>\n    <tr>\n      <th>Hungary</th>\n      <td>6.90</td>\n    </tr>\n    <tr>\n      <th>Belgium</th>\n      <td>6.83</td>\n    </tr>\n    <tr>\n      <th>Cyprus</th>\n      <td>6.59</td>\n    </tr>\n    <tr>\n      <th>Czech Republic</th>\n      <td>6.45</td>\n    </tr>\n    <tr>\n      <th>Sweden</th>\n      <td>6.39</td>\n    </tr>\n    <tr>\n      <th>Costa Rica</th>\n      <td>6.24</td>\n    </tr>\n    <tr>\n      <th>Ireland</th>\n      <td>6.20</td>\n    </tr>\n    <tr>\n      <th>Canada</th>\n      <td>6.19</td>\n    </tr>\n    <tr>\n      <th>Romania</th>\n      <td>6.03</td>\n    </tr>\n    <tr>\n      <th>United Kingdom</th>\n      <td>6.03</td>\n    </tr>\n    <tr>\n      <th>Germany</th>\n      <td>5.89</td>\n    </tr>\n    <tr>\n      <th>Slovenia</th>\n      <td>5.79</td>\n    </tr>\n    <tr>\n      <th>Malta</th>\n      <td>4.96</td>\n    </tr>\n    <tr>\n      <th>Australia</th>\n      <td>4.96</td>\n    </tr>\n    <tr>\n      <th>Netherlands</th>\n      <td>4.77</td>\n    </tr>\n    <tr>\n      <th>Luxembourg</th>\n      <td>4.59</td>\n    </tr>\n    <tr>\n      <th>New Zealand</th>\n      <td>4.39</td>\n    </tr>\n    <tr>\n      <th>Denmark</th>\n      <td>4.37</td>\n    </tr>\n    <tr>\n      <th>Japan</th>\n      <td>4.20</td>\n    </tr>\n    <tr>\n      <th>Iceland</th>\n      <td>3.93</td>\n    </tr>\n    <tr>\n      <th>Austria</th>\n      <td>3.86</td>\n    </tr>\n    <tr>\n      <th>Switzerland</th>\n      <td>3.40</td>\n    </tr>\n    <tr>\n      <th>Norway</th>\n      <td>3.09</td>\n    </tr>\n    <tr>\n      <th>Mexico</th>\n      <td>3.07</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "execution_count": 6
@@ -181,7 +226,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Empty DataFrame\nColumns: [unemploy_rate]\nIndex: []\nEmpty DataFrame\nColumns: [unemploy_rate]\nIndex: []\n"
+      "              unemploy_rate\ncountry                    \nSouth Africa          21.29\nGreece                13.37\nCroatia               11.40\nPoland                10.82\nBulgaria              10.46\n             unemploy_rate\ncountry                   \nIceland               3.93\nAustria               3.86\nSwitzerland           3.40\nNorway                3.09\nMexico                3.07\n"
      ]
     }
    ],
@@ -199,11 +244,23 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "                            unemploy_rate\n",
+       "country        year gender               \n",
+       "Australia      2000 female           4.99\n",
+       "                    male             5.87\n",
+       "               2001 female           5.35\n",
+       "                    male             6.40\n",
+       "               2002 female           5.16\n",
+       "...                                   ...\n",
+       "United Kingdom 2014 male             6.75\n",
+       "               2015 female           4.97\n",
+       "                    male             5.58\n",
+       "               2016 female           4.71\n",
+       "                    male             5.17\n",
+       "\n",
+       "[1414 rows x 1 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n    <tr>\n      <th>country</th>\n      <th>year</th>\n      <th>gender</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th></th>\n      <th>unemploy_rate</th>\n    </tr>\n    <tr>\n      <th>country</th>\n      <th>year</th>\n      <th>gender</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">Australia</th>\n      <th rowspan=\"2\" valign=\"top\">2000</th>\n      <th>female</th>\n      <td>4.99</td>\n    </tr>\n    <tr>\n      <th>male</th>\n      <td>5.87</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">2001</th>\n      <th>female</th>\n      <td>5.35</td>\n    </tr>\n    <tr>\n      <th>male</th>\n      <td>6.40</td>\n    </tr>\n    <tr>\n      <th>2002</th>\n      <th>female</th>\n      <td>5.16</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">United Kingdom</th>\n      <th>2014</th>\n      <th>male</th>\n      <td>6.75</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">2015</th>\n      <th>female</th>\n      <td>4.97</td>\n    </tr>\n    <tr>\n      <th>male</th>\n      <td>5.58</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">2016</th>\n      <th>female</th>\n      <td>4.71</td>\n    </tr>\n    <tr>\n      <th>male</th>\n      <td>5.17</td>\n    </tr>\n  </tbody>\n</table>\n<p>1414 rows × 1 columns</p>\n</div>"
      },
      "metadata": {},
      "execution_count": 9
@@ -223,11 +280,23 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "                     unemploy_rate\n",
+       "country        year               \n",
+       "Australia      2000           5.43\n",
+       "               2001           5.88\n",
+       "               2002           5.51\n",
+       "               2003           5.15\n",
+       "               2004           4.78\n",
+       "...                            ...\n",
+       "United Kingdom 2012           7.72\n",
+       "               2013           7.41\n",
+       "               2014           6.29\n",
+       "               2015           5.27\n",
+       "               2016           4.94\n",
+       "\n",
+       "[707 rows x 1 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n    </tr>\n    <tr>\n      <th>country</th>\n      <th>year</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>unemploy_rate</th>\n    </tr>\n    <tr>\n      <th>country</th>\n      <th>year</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">Australia</th>\n      <th>2000</th>\n      <td>5.43</td>\n    </tr>\n    <tr>\n      <th>2001</th>\n      <td>5.88</td>\n    </tr>\n    <tr>\n      <th>2002</th>\n      <td>5.51</td>\n    </tr>\n    <tr>\n      <th>2003</th>\n      <td>5.15</td>\n    </tr>\n    <tr>\n      <th>2004</th>\n      <td>4.78</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">United Kingdom</th>\n      <th>2012</th>\n      <td>7.72</td>\n    </tr>\n    <tr>\n      <th>2013</th>\n      <td>7.41</td>\n    </tr>\n    <tr>\n      <th>2014</th>\n      <td>6.29</td>\n    </tr>\n    <tr>\n      <th>2015</th>\n      <td>5.27</td>\n    </tr>\n    <tr>\n      <th>2016</th>\n      <td>4.94</td>\n    </tr>\n  </tbody>\n</table>\n<p>707 rows × 1 columns</p>\n</div>"
      },
      "metadata": {},
      "execution_count": 10
